--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,131 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-/* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
 @import url('./container.css');
 @import url('./animations.css');
 
-/* Sections style */
 @import url('./header.css');
 @import url('./vite-promo.css');
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+#datetime-picker {
+  border-radius: 4px;
+  width: 280px;
+  height: 40px;
+  outline: transparent;
+  padding: 8px 16px;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  border: 1px solid #808080;
+}
+
+#datetime-picker:enabled:hover {
+  border: 1px solid #000;
+}
+
+#datetime-picker:enabled:focus {
+  border-color: #4e75ff;
+}
+
+#datetime-picker:disabled {
+  color: #808080;
+  cursor: not-allowed;
+}
+
+.timer-button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 75px;
+  height: 40px;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  background-color: #4e75ff;
+  border: none;
+  color: #fff;
+}
+
+.timer-button:disabled {
+  color: #989898;
+  background-color: #cfcfcf;
+  cursor: not-allowed;
+}
+
+.timer-button:enabled:hover {
+  background-color: #6c8cff;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.input-wrapper {
+  display: flex;
+  gap: 8px;
+  margin-bottom: 32px;
+}
+
+.timer {
+  display: flex;
+  gap: 24px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.value {
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+/* ========================================================================================================================================================
+
+======================================================================================================================================================== */
+
+.delay-input {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  padding: 8px 16px;
+  outline: transparent;
+}
+
+.delay-label {
+  display: flex;
+  flex-direction: column;
+  line-height: 200%;
+  margin-bottom: 16px;
+}
+.fieldset {
+  border-radius: 4px;
+  stroke-width: 1px;
+  stroke: #808080;
+  width: 360px;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 48px;
+  margin-bottom: 24px;
+}
+.submit-button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 360px;
+  height: 40px;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background-color: #4e75ff;
+  border: none;
+}
+
+.submit-button:hover {
+  background-color: #6c8cff;
+}
